--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,8 @@
 
     <modules>
        <module>chapter_001</module>
+        <module>Chapter_002</module>
+        <module>chapter_002</module>
     </modules>
 	
 	<build>
