--- a/pom.xml
+++ b/pom.xml
@@ -18,7 +18,8 @@
 		<module>chapter_002</module>
 		<module>chapter_003</module>
 		<module>chapter_004</module>
-	</modules>
+        <module>chapter_005</module>
+    </modules>
 	
 	<build>
 		<plugins>
@@ -51,7 +52,7 @@
 			<plugin>
 				<groupId>org.jacoco</groupId>
 				<artifactId>jacoco-maven-plugin</artifactId>
-				<version>0.7.9</version>
+				<version>0.8.2</version>
 				<executions>
 					<execution>
 						<goals>
